# CMake

./: README.md  teste  teste.c
Alloc-Memory/: CMakeLists.txt  main.c
DynamicLoadedLibrary/: README.md
DynamicLoadedLibrary/C/: foo.c
DynamicLoadedLibrary/C++/Example-2/: CMakeLists.txt  main.cpp
DynamicLoadedLibrary/C++/Example-2/models_library/: CMakeLists.txt  library_1.cpp  library_1.h  library_2.cpp  model_common.h
DynamicLoadedLibrary/C++/example/: Makefile  foo.cpp  shared.cpp
Example-0/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cpp
Example-1/: CMakeLists.txt  test.cpp
Example-2/: CMakeLists.txt
Example-2/src/: main.cpp
Example-3/: CMakeLists.txt
Example-3/include/: Student.h
Example-3/src/: Student.cpp
Example-4/: CMakeLists.txt
Example-5/: CMakeLists.txt  libtest.cpp
FunctionPointer/Version-1/: main.c
FunctionPointer/Version-2/Main-Program/: CMakeLists.txt  main.c
FunctionPointer/Version-2/Shared-Library/: CMakeLists.txt  functions1.c  functions1.h  functions2.c  functions3.c  functions3.h  model_common.h
Graph-Library/: CMakeLists.txt  main.c
Graph-Library/C/: CMakeLists.txt  graph.c  main.c
Graph-Library/C++/: CMakeLists.txt  main.cpp  run_valgrind.sh
Graph-Library/C++/src/: graph.h
Ini-Parser/: CMakeLists.txt  recompile_project.sh
Ini-Parser/inputs/: config.ini
Ini-Parser/src/: main.c
Ini-Parser/src/common_types/: common_types.h
Ini-Parser/src/config/: CMakeLists.txt  config_parser.c  config_parser.h  section_config.c  section_config.h
Ini-Parser/src/config_helpers/: config_helpers.h
Ini-Parser/src/ini_parser/: ini_file_sections.h
Ini-Parser/src/utils/: file_utils.c  file_utils.h  sort.c
MPI/Batch-Sample/: CMakeLists.txt  serial.c
Parse-Command-Line/: parser.c
Parse-Command-Line/Getopt/: parser.c
Parse-Command-Line/Getsubopt/: parser.c
Parse-Command-Line/Getsubopt_Sample/: CMakeLists.txt  parser.c
Parse-Ini-File/: CMakeLists.txt  config.ini  main.c
Parse-Ini-File/ini_parser/: ini_file_sections.h
SharedLibrary/With-CMake/: README.md
SharedLibrary/With-CMake/Generator/: CMakeLists.txt  shared.c  shared.h
SharedLibrary/With-CMake/Usage/: CMakeLists.txt
SharedLibrary/Without-CMake/: README.md  main.c
Switch-Arrays-Pointer/C/: CMakeLists.txt  swap.c
Switch-Arrays-Pointer/C++/: CMakeLists.txt  swap.cxx
Switch-Lines-Matrix/: CMakeLists.txt
Switch-Lines-Matrix/src/: matrix_lines.cxx
VTK-Output/: CMakeLists.txt  main.cxx  output.vtp  vtk_output.cxx  vtk_output.hpp
VTK-Output/inputs/: input  input-co-tree  input2
