cmake_minimum_required(VERSION 2.8.9)
project(Graph)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_C_STANDARD 99)

#FIND_PACKAGE(VTK REQUIRED)
#INCLUDE(${VTK_USE_FILE})

#ADD_SUBDIRECTORY(vtk_output_library)

ADD_EXECUTABLE(Graph graph.c main.c)

#ADD_DEPENDENCIES(Graph vtk_output)

#TARGET_LINK_LIBRARIES(Graph vtk_output m ${VTK_LIBRARIES})
 
TARGET_LINK_LIBRARIES(Graph m)
