cmake_minimum_required(VERSION 3.0.1)
project(Main)

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared_libs )

ADD_EXECUTABLE(Main main.cpp)

TARGET_LINK_LIBRARIES(Main dl m)

ADD_SUBDIRECTORY(models_library)

